fix: mark possible stuck clients based on time diff
- Color jobs list rows in black if time diff is greater than 600
seconds, which could indicate that colored clients are stuck or idling

--- a/static/dqm_style.css
+++ b/static/dqm_style.css
@@ -291,6 +291,15 @@ table.table.custom-table-striped-columns tr.table-warning-custom td:nth-child(ev
   background-color: #dfbe3a;
 }
 
+table tr.table-dark-custom td,
+table.table tbody tr td.table-dark-custom {
+  background-color: #343a40;
+}
+
+table.table.custom-table-striped-columns tr.table-dark-custom td:nth-child(even) {
+  background-color: #2c3035;
+}
+
 /* Style the buttons that are used to open the tab content */
 .tab button {
   background-color: #c1c1c1;
